<resources>
    <string name="app_name">NFA to DFA</string>
    <string name="action_settings">Settings</string>
    <string name="states">Enter state names separated by a space</string>
    <string name="symbols">Enter symbols of the alphabet separated by a space - do NOT include epsilon</string>
    <string name="startState">Enter starting state name</string>
    <string name="finalStates">Enter final state names separated by a space</string>
    <string name="next">Next</string>
    <string name="transFuncInstructs">Enter the states, separated by a space, which each transition leads to.
    If a transition does not lead to any state, leave it blank.</string>
    <string name="convert">Convert</string>
    <string name="titleActivityTransFunc">TransFuncActivity</string>
    <string name="incompleteError">Please complete all fields</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
