<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            style="@style/mainActivityTextView"
            android:text="@string/states"
            android:id="@+id/stateNamesText"
            android:labelFor="@+id/stateNamesEdit"
            android:layout_alignParentTop="true" />

        <EditText
            style="@style/mainActivityEditText"
            android:id="@+id/stateNamesEdit"
            android:layout_below="@+id/stateNamesText" />

        <TextView
            style="@style/mainActivityTextView"
            android:text="@string/symbols"
            android:id="@+id/symbolsText"
            android:labelFor="@+id/symbolsEdit"
            android:layout_below="@+id/stateNamesEdit"
            android:layout_marginTop="40dp" />

        <EditText
            style="@style/mainActivityEditText"
            android:id="@+id/symbolsEdit"
            android:layout_below="@+id/symbolsText" />

        <TextView
            style="@style/mainActivityTextView"
            android:text="@string/startState"
            android:id="@+id/startStateText"
            android:labelFor="@+id/startStateEdit"
            android:layout_below="@+id/symbolsEdit"
            android:layout_marginTop="40dp" />

        <EditText
            style="@style/mainActivityEditText"
            android:id="@+id/startStateEdit"
            android:layout_below="@+id/startStateText" />

        <TextView
            style="@style/mainActivityTextView"
            android:text="@string/finalStates"
            android:id="@+id/finalStatesText"
            android:labelFor="@+id/finalStatesEdit"
            android:layout_below="@+id/startStateEdit"
            android:layout_marginTop="40dp" />

        <EditText
            style="@style/mainActivityEditText"
            android:id="@+id/finalStatesEdit"
            android:layout_below="@+id/finalStatesText" />

        <Button
            style="@style/advanceButton"
            android:text="@string/next"
            android:id="@+id/nextButton"
            android:layout_below="@+id/finalStatesEdit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</ScrollView>